Feat/solana devnet (#2)
* finish renaming economics

* update redis naming+docs for standalone mode

* feature: add solana devnet support

* format merged solana devnet changes

* wip: pr review feedback, alt required, use zod, misc improvements. note devnet protocol+sdk are stale, hence failing tests. awaiting redeployment/rerelease

* Add Solana launch read route

* fix(solana): use zero hashes for disabled hooks

* update tests DopplerERC20v1 interface/expectations

---------
